devopszon-client/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopszon-client
  namespace: devopszon
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: console.devopszon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devopszon-client
                port:
                  number: 80
